# lab06_light_template

./: CMakeLists.txt  README.md
src/: ReflSampler.cpp  ReflSampler.h  canvas2d.cpp  canvas2d.h  lightmodel.cpp  lightmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  param.h  rgba.cpp  rgba.h
